--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   z-index: 1;
   color: white;
   text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 20px;
   width: 40%;
   height: 80%;
