--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
   justify-content: center;
   align-items: center;
   background-color: #f2f2f2;
-  height: 70dvh;
+  height: auto;
+  width: auto;
   padding: 20px;
 }
 .video-container::before {
@@ -29,6 +30,18 @@
   display: flex;
   place-items: center;
 }
+
+@media (max-width: 768px) {
+  .video-container::before {
+    height: 75%;
+  }
+}
+@media (max-width: 480px) {
+  .video-container::before {
+    height: 70%;
+  }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
